force-app/main/default/objects/Sugerencia__c/Sugerencia__c.object-meta.xml
<CustomObject>
    <label>Sugerencia</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Numero de Sugerencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sugerencias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>