force-app/main/default/objects/Sugerencia__c/fields/Correo_Electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico__c</fullName>
    <label>Correo Electronico</label>
    <type>Email</type>
</CustomField>