force-app/main/default/objects/Sugerencia__c/fields/Sugerencia__c.field-meta.xml
<CustomField>
    <fullName>Sugerencia__c</fullName>
    <label>Sugerencia</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>