force-app/main/default/objects/Sugerencia__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Telefono</label>
    <type>Email</type>
</CustomField>